--- a/mcc-modules.yaml
+++ b/mcc-modules.yaml
@@ -1,7 +1,7 @@
 apiVersion: kaas.mirantis.com/v1alpha1
 kind: HostOSConfigurationModules
 metadata:
-  name: mcc-modules
+  name: mcc-ps-modules
 spec:
   modules:
     - name: multipath
